[package]
name = "dldir"
version = "0.1.1"
authors = ["Naqua Darazaki <n.darazaki@gmail.com>"]
edition = "2018"
description = "Download a directory over HTTP(S)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
reqwest = { version = "0.10", features = ["blocking"] }
walkdir = "2"
regex = "1"
